<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BuildingDetailsActivity">

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:text="@string/address" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_margin="8dp"
        app:layout_behavior="@string/address" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:text="@string/City" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="8dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvPostalCode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:text="@string/postal_code" />

    <EditText
        android:id="@+id/etPostalCode"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_margin="8dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvResidenceType"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:text="@string/resType" />

    <RadioGroup
        android:id="@+id/rgResType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_margin="8dp"
        android:baselineAligned="false"
        android:checkedButton="@id/rbPrincipal"
        android:orientation="horizontal"
        android:tag="@string/resType"
        android:textAlignment="textStart">

        <RadioButton
            android:id="@+id/rbPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/firstRes" />

        <RadioButton
            android:id="@+id/rbSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/secondRes" />
    </RadioGroup>

    <ImageView
        android:id="@+id/ivLocationThumbnail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/save_building_details"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="save"
        android:textAlignment="center" />

</GridLayout>

